--- a/combateCartas/angular.json
+++ b/combateCartas/angular.json
@@ -75,7 +75,7 @@
         },
         "serve": {
           "options": {
-            "proxyConfig": "src/proxy.conf.json"
+            "port": 4200
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
