--- a/combateCartas/Dockerfile
+++ b/combateCartas/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 LABEL authors="SUI"
 
-RUN ng build --configuration development
+RUN ng build #--configuration development
 
 WORKDIR /app
 COPY ./www /app
