--- a/combateCartas/Dockerfile
+++ b/combateCartas/Dockerfile
@@ -1,9 +1,15 @@
 FROM node:18-alpine
 LABEL authors="SUI"
 
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+
 RUN ng build --configuration development
 
-WORKDIR /app
 COPY ./www /app
 
 RUN npm install -g http-server
