--- a/combateCartas/Dockerfile
+++ b/combateCartas/Dockerfile
@@ -8,8 +8,8 @@ RUN npm install
 
 COPY . .
 
-RUN npm install
-RUN npm install -g @angular/cli
+# RUN npm install # Esta mas que instalado.
+# RUN npm install -g @angular/cli
 RUN ng build --configuration development
 # RUN ls -la /app # No lo muestra.
 
