--- a/combateCartas/Dockerfile
+++ b/combateCartas/Dockerfile
@@ -10,10 +10,10 @@ COPY . .
 
 # Si lo hago manualmente no da error, pero si lo hago con el comando RUN da error.
 # RUN npm install -g @angular/cli
-RUN ng build --configuration development
+# RUN ng build --configuration development
 # RUN ls -la /app # No lo muestra.
 
-COPY ./www /app
+COPY ./combateCartas/www /app
 
 # RUN npm install -g http-server || \
 #     (sleep 5 && npm install -g http-server) || \
