--- a/combateCartas/Dockerfile
+++ b/combateCartas/Dockerfile
@@ -15,7 +15,7 @@ COPY . .
 
 COPY ./www /app
 
-RUN npm install -g http-server
+# RUN npm install -g http-server
 # RUN npm install http-server
 
 EXPOSE 4200
