--- a/combateCartas/Dockerfile
+++ b/combateCartas/Dockerfile
@@ -8,14 +8,14 @@ COPY package*.json ./
 
 COPY . .
 
+
 # Si lo hago manualmente no da error, pero si lo hago con el comando RUN da error.
 # RUN npm install -g @angular/cli
 # RUN ng build --configuration development
-# RUN ls -la /app # No lo muestra.
 
 COPY ./www /app
 
-# RUN npm install -g http-server
+RUN npm install -g http-server
 # RUN npm install http-server
 
 EXPOSE 4200
